Fix the gradient of edit profile button in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -493,12 +493,14 @@ div#picker {
   cursor: pointer;
   color: blue;
   border: 2px solid blue;
-  transition: all 0.4s;
+  filter: invert(0%) !important;
+  transition: color 0.4s;
 }
 
 .img-edit:hover {
   opacity: 1;
   background: linear-gradient(40deg, #e107c1, #59afc7);
+  filter: invert(0%) !important;
   /* transition: transform 0.5s ease-out; */
   color: white;
 }
